--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
-graft *
-prune .git
-prune .ropeproject
+include README.rst
+include LICENSE
+include MANIFEST.in
+recursive-include redator/static *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
